[package]
name = "axia-runtime-common"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
impl-trait-for-tuples = "0.2.0"
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
axia-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
log = { version = "0.4.13", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
static_assertions = "1.1.0"

beefy-primitives = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
inherents = { package = "sp-inherents", git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-std = { package = "sp-std", git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-session = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-staking = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-npos-elections = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }

pallet-authorship = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-balances = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-session = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
frame-support = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-staking = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-timestamp = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-vesting = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-transaction-payment = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-treasury = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-election-provider-multi-phase = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-beefy-mmr = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
frame-election-provider-support = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-bags-list = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }

frame-benchmarking = { git = "https://github.com/axia-tech/axia-core", default-features = false, optional = true , branch = "dev" }
pallet-babe = { git = "https://github.com/axia-tech/axia-core", default-features = false, optional = true , branch = "dev" }

primitives = { package = "axia-primitives", path = "../../primitives", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false }
runtime-allychains = { package = "axia-runtime-allychains", path = "../allychains", default-features = false }

slot-range-helper = { path = "slot_range_helper", default-features = false }
xcm = { path = "../../xcm", default-features = false }

[dev-dependencies]
hex-literal = "0.3.3"
frame-support-test = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-babe = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-treasury = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-keystore = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
serde_json = "1.0.67"
libsecp256k1 = "0.7.0"

[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"axia-scale-codec/std",
	"scale-info/std",
	"log/std",
	"rustc-hex/std",
	"serde_derive",
	"serde/std",
	"primitives/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-beefy-mmr/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-vesting/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-election-provider-multi-phase/std",
	"slot-range-helper/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"frame-system/std",
	"libsecp256k1/std",
	"runtime-allychains/std",
	"xcm/std",
	"sp-npos-elections/std",
	"pallet-bags-list/std"
]
runtime-benchmarks = [
	"libsecp256k1/hmac",
	"libsecp256k1/static-context",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"runtime-allychains/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
]
try-runtime = [
	"runtime-allychains/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
]
