[package]
name = "axia-test-runtime"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
axia-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.6.1"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
beefy-primitives = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
inherents = { package = "sp-inherents", git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-staking = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-session = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-version = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
frame-election-provider-support = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }

pallet-authority-discovery = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-authorship = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-babe = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-balances = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-transaction-payment = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
frame-executive = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-grandpa = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-indices = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-mmr-primitives = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-nicks = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-offences = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-session = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
frame-support = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-staking = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-staking-reward-curve = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
frame-system = {git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
frame-system-rpc-runtime-api = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-timestamp = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-sudo = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-vesting = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }

runtime-common = { package = "axia-runtime-common", path = "../common", default-features = false }
primitives = { package = "axia-primitives", path = "../../primitives", default-features = false }
pallet-xcm = { path = "../../xcm/pallet-xcm", default-features = false }
axia-allychain = { path = "../../allychain", default-features = false }
axia-runtime-allychains = { path = "../allychains", default-features = false }
xcm-builder = { path = "../../xcm/xcm-builder", default-features = false }
xcm-executor = { path = "../../xcm/xcm-executor", default-features = false }
xcm = { path = "../../xcm", default-features = false }

[dev-dependencies]
hex-literal = "0.3.3"
tiny-keccak = "2.0.2"
keyring = { package = "sp-keyring", git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-trie = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
serde_json = "1.0.67"

[build-dependencies]
axlib-wasm-builder = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"pallet-authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"axia-scale-codec/std",
	"scale-info/std",
	"inherents/std",
	"sp-core/std",
	"axia-allychain/std",
	"pallet-xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-nicks/std",
	"pallet-offences/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"pallet-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-timestamp/std",
	"sp-version/std",
	"pallet-vesting/std",
	"serde_derive",
	"serde/std",
	"pallet-babe/std",
	"babe-primitives/std",
	"sp-session/std",
	"runtime-common/std",
	"log/std",
	"frame-election-provider-support/std",
]
