[package]
name = "staking-miner"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
codec = { package = "axia-scale-codec", version = "2.0.0" }
tokio = { version = "1.12", features = ["macros"] }
log = "0.4.11"
env_logger = "0.9.0"
structopt = "0.3.23"
jsonrpsee-ws-client = { version = "0.3.1", default-features = false, features = ["tokio1"] }
serde_json = "1.0"
serde = "1.0.130"
paste = "1.0.5"
thiserror = "1.0.30"

remote-externalities = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

sp-core = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-version = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-npos-elections = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-transaction-pool-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }


frame-system = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
frame-support = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
frame-election-provider-support = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-election-provider-multi-phase = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-staking = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-balances = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-transaction-payment = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

core-primitives = { package = "axia-core-primitives", path = "../../core-primitives" }

runtime-common = { package = "axia-runtime-common", path = "../../runtime/common" }
axia-runtime = { path = "../../runtime/axia" }
axiatest-runtime = { path = "../../runtime/axiatest" }
alphanet-runtime = { path = "../../runtime/alphanet" }

sub-tokens = { git = "https://github.com/axiatech/axlib-debug-kit", branch = "master" }

[dev-dependencies]
sp-version = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
