[package]
name = "axia-voter-bags"
version = "0.9.0"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
generate-bags = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
structopt = "0.3.21"

alphanet-runtime = { path = "../../runtime/alphanet" }
axiatest-runtime = { path = "../../runtime/axiatest" }
axia-runtime = { path = "../../runtime/axia" }
