[package]
name = "pallet-xcm-benchmarks"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
version = "0.9.8"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "axia-scale-codec", version = "2.0.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axia-core" , branch = "dev" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axia-core" , branch = "dev" }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axia-core" , branch = "dev" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axia-core" , branch = "dev" }
xcm-executor = { path = "../xcm-executor", default-features = false, features = ["runtime-benchmarks"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axia-core" , branch = "dev" }
xcm = { path = "..", default-features = false, features = ["runtime-benchmarks"] }
log = "0.4.0"

[dev-dependencies]
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/axia-tech/axia-core" , branch = "dev" }
pallet-assets = { version = "4.0.0-dev", git = "https://github.com/axia-tech/axia-core" , branch = "dev" }
sp-core = { version = "4.0.0-dev", git = "https://github.com/axia-tech/axia-core" , branch = "dev" }
sp-io = { version = "4.0.0-dev", git = "https://github.com/axia-tech/axia-core" , branch = "dev" }
sp-tracing = { version = "4.0.0-dev", git = "https://github.com/axia-tech/axia-core" , branch = "dev" }
xcm-builder = { path = "../xcm-builder" }
xcm = { path = ".." }
# temp
pallet-xcm = { path = "../pallet-xcm" }
axia-runtime-common = { path = "../../runtime/common" }
# alphanet-runtime = { path = "../../runtime/alphanet", features = ["runtime-benchmarks"] }
axia-primitives = { path = "../../primitives" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std"
]
