[package]
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
name = "pallet-xcm"
version = "0.9.12"

[dependencies]
codec = { package = "axia-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", optional = true, features = ["derive"] }
log = { version = "0.4.14", default-features = false }

sp-std = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
frame-support = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }

xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
axia-runtime-allychains = { path = "../../runtime/allychains" }
sp-io = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
xcm-builder = { path = "../xcm-builder" }
axia-allychain = { path = "../../allychain" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
]
runtime-benchmarks = []
