[package]
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
name = "xcm-builder"
description = "Tools & types for building with XCM and its executor."
version = "0.9.12"

[dependencies]
axia-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-arithmetic = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
frame-support = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
pallet-transaction-payment = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
log = { version = "0.4.0", default-features = false }

# AXIA dependencies
axia-allychain = { path = "../../allychain", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-balances = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
pallet-xcm = { path = "../pallet-xcm" }
axia-runtime-allychains = { path = "../../runtime/allychains" }
[features]
default = ["std"]
runtime-benchmarks = []
std = [
	"log/std",
	"axia-scale-codec/std",
	"scale-info/std",
	"xcm/std",
	"xcm-executor/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"axia-allychain/std",
	"pallet-transaction-payment/std",
]
