[package]
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
name = "xcm-executor"
description = "An abstract and configurable XCM message executor."
version = "0.9.12"

[dependencies]
impl-trait-for-tuples = "0.2.0"
axia-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-arithmetic = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
frame-support = { git = "https://github.com/axia-tech/axia-core", default-features = false , branch = "dev" }
log = { version = "0.4.14", default-features = false }
frame-benchmarking = { git = "https://github.com/axia-tech/axia-core", default-features = false, optional = true , branch = "dev" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
]
std = [
	"axia-scale-codec/std",
	"xcm/std",
	"sp-std/std",
	"sp-io/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"log/std",
]
