[package]
name = "xcm-simulator"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
description = "Test kit to simulate cross-chain message passing and XCM execution"
edition = "2018"

[dependencies]
codec = { package = "axia-scale-codec", version = "2.0.0" }
paste = "1.0.5"

frame-support = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

xcm = { path = "../" }
xcm-executor = { path = "../xcm-executor" }
axia-core-primitives = { path = "../../core-primitives"}
axia-allychain = { path = "../../allychain" }
axia-runtime-allychains = { path = "../../runtime/allychains" }
